# WV-Core

./: CMakeLists.txt  INPUT_API.md
include/: core.h
include/core/: Logger.h  Test.h
include/wv/: Logger.h  core.h  wvpch.h
include/wv/app/: App.h  EntryPoint.h  PlatformEntryPoint.h
include/wv/assets/: AssetLoader.h  AssetManager.h  AssetProvider.h  IAssetProvider.h
include/wv/events/: Event.h  EventDispatcher.h  KeyPressEvent.h  KeyReleaseEvent.h  MouseClickEvent.h  MouseMoveEvent.h  MouseReleaseEvent.h  MouseScrollEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
include/wv/input/: GamepadInput.h  Input.h  InputManager.h  Key.h  OpenGLKey.h  TouchInput.h
include/wv/platform/: IGraphicsContext.h  IPlatform.h  InputState.h  PlatformConfig.h
include/wv/rendering/: Camera.h  ElementBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArrayObject.h  VertexBuffer.h  Window.h
include/wv/threading/: ThreadPool.h
src/: Logger.cpp  Test.cpp
src/app/: App.cpp
src/assets/: AssetManager.cpp
src/input/: GamepadInput.cpp  Input.cpp  InputManager.cpp  TouchInput.cpp
src/platform/: PlatformFactory.cpp
src/platform/Android/: AndroidGraphicsContext.cpp  AndroidGraphicsContext.h  AndroidPlatform.cpp  AndroidPlatform.h
src/platform/Desktop/: DesktopGraphicsContext.cpp  DesktopGraphicsContext.h  DesktopPlatform.cpp  DesktopPlatform.h
src/platform/Nintendo/: GameCubeGraphicsContext.cpp  GameCubeGraphicsContext.h  GameCubePlatform.cpp  GameCubePlatform.h  SwitchGraphicsContext.h  SwitchPlatform.cpp  SwitchPlatform.h  WiiGraphicsContext.cpp  WiiGraphicsContext.h  WiiPlatform.cpp  WiiPlatform.h  WiiUGraphicsContext.cpp  WiiUGraphicsContext.h  WiiUPlatform.cpp  WiiUPlatform.h
src/platform/PS3/: PS3GraphicsContext.cpp  PS3GraphicsContext.h  PS3Platform.cpp  PS3Platform.h
src/platform/PS4/: PS4GraphicsContext.cpp  PS4GraphicsContext.h  PS4Platform.cpp  PS4Platform.h
src/platform/Xbox/: XboxSeriesGraphicsContext.cpp  XboxSeriesGraphicsContext.h  XboxSeriesPlatform.cpp  XboxSeriesPlatform.h
src/platform/iOS/: iOSGraphicsContext.cpp  iOSGraphicsContext.h  iOSPlatform.cpp  iOSPlatform.h
src/rendering/: Camera.cpp  ElementBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBuffer.cpp  Window.cpp
src/threading/: ThreadPool.cpp
